[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/ui/main_menu/screens/main_screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/main_menu/screens/settings_screen.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/main_menu/screens/credits_screen.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/archievements_screen/archievements_screen.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/main_menu/menu_screen_controller.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="menu_screen_controller" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="main" parent="menu_screen_controller" instance=ExtResource( 1 )]

[node name="settings" parent="menu_screen_controller" instance=ExtResource( 3 )]
visible = false

[node name="credits" parent="menu_screen_controller" instance=ExtResource( 4 )]
visible = false

[node name="archievements_screen" parent="menu_screen_controller" instance=ExtResource( 5 )]
visible = false

[node name="animation_player" type="AnimationPlayer" parent="menu_screen_controller"]
autoplay = "RESET"
anims/RESET = SubResource( 1 )
anims/fade_in = SubResource( 2 )
anims/fade_out = SubResource( 3 )

[connection signal="button_pressed" from="menu_screen_controller/main" to="menu_screen_controller" method="_on_button_pressed"]
[connection signal="button_pressed" from="menu_screen_controller/credits" to="menu_screen_controller" method="_on_button_pressed"]
[connection signal="button_pressed" from="menu_screen_controller/archievements_screen" to="menu_screen_controller" method="_on_button_pressed"]
[connection signal="animation_finished" from="menu_screen_controller/animation_player" to="menu_screen_controller" method="_on_animation_player_animation_finished"]

[editable path="menu_screen_controller/settings"]
